Properly distinguish between different integer types for properties

https://bugzilla.gnome.org/show_bug.cgi?id=664150